--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8cb39bae",
+   "metadata": {},
+   "source": [
+    "# API URL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cf986bd4",
@@ -8,6 +16,14 @@
    "outputs": [],
    "source": [
     "base_url = \"http://localhost:8080/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7975c7b8",
+   "metadata": {},
+   "source": [
+    "# Example usage with text"
    ]
   },
   {
@@ -69,6 +85,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "827b42de",
+   "metadata": {},
+   "source": [
+    "# Example usage (stream)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8dfae19e",
@@ -104,6 +128,61 @@
     "            json_data = line[6:]  # Bỏ \"data: \"\n",
     "            data = json.loads(json_data)\n",
     "            print(f\"{data.get('text')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d573906c",
+   "metadata": {},
+   "source": [
+    "# Example usage text + image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aafeacc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# URL\n",
+    "api_url = base_url + \"generate/image\"\n",
+    "\n",
+    "image_path = \"image.png\"\n",
+    "file_name = os.path.basename(image_path)\n",
+    "\n",
+    "# Prompt\n",
+    "user_prompt = r\"\"\"\n",
+    "Giải bài sau:\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# Đọc file ảnh trước khi đóng\n",
+    "with open(image_path, \"rb\") as image_file:\n",
+    "    image_data = image_file.read()\n",
+    "\n",
+    "# Tạo files dictionary với data đã đọc\n",
+    "files_to_upload = {\"image\": (file_name, image_data, \"image/png\")}\n",
+    "\n",
+    "# Tạo form data (không dùng json khi có files)\n",
+    "form_data = {\"prompt\": user_prompt, \"language\": \"vi\"}\n",
+    "\n",
+    "# Gửi yêu cầu POST với form data và files\n",
+    "response = requests.post(api_url, data=form_data, files=files_to_upload)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    # In kết quả\n",
+    "    result = response.json()\n",
+    "    print(\"Response:\", result.get(\"response\"))\n",
+    "    if \"image_info\" in result:\n",
+    "        print(\"\\nImage info:\", result.get(\"image_info\"))\n",
+    "else:\n",
+    "    print(\"Error:\", response.status_code)\n",
+    "    print(\"Response text:\", response.text)"
    ]
   }
  ],
